added custom-tabs component and fixed lint errors on scroll-indicator component

--- a/25-projects/src/components/scroll-indicator/styles.css
+++ b/25-projects/src/components/scroll-indicator/styles.css
@@ -18,9 +18,11 @@
 .current-progress-bar{
     height: 10px;
     background: #8b02b5;
-    width: 0%;
 }
 
 .data-container{
     margin-top: 100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
